--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <li><a href="./video">Video playback</a>
     <li><a href="./getUserMedia">getUserMedia()</a>
     <li><a href="./OpenCV">OpenCV.js<a>
+    <li><a href="./screen">Screen resolution<a>
   </ul>
 
 </body>
