--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
     <li><a href="./video">Video playback</a>
     <li><a href="./getUserMedia">getUserMedia()</a>
     <li><a href="./OpenCV">OpenCV.js<a>
-    <li><a href="./screen">Screen resolution<a>
+    <li><a href="./screen">Show screen resolution<a>
+    <li><a href="./tfjs/coco-ssd">TensorFlow.js<a>
+    <li><a href="./SkyWay">NTT Communications SkyWay test<a>
   </ul>
 
 </body>
